[project]
name = "reflection-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "tester",email = "info@effisync.net"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "isort (>=6.0.0,<7.0.0)",
    "langchain (>=0.3.19,<0.4.0)",
    "langchain-openai (>=0.3.6,<0.4.0)",
    "langgraph (>=0.2.73,<0.3.0)",
    "langchain-ollama (>=0.2.3,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
